<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="swap_toolbar_text">swap</string>
    <string name="swap_asset_title">보유자산</string>
    <string name="swap_asset_tools_text">20.098615</string>
    <string name="swap_send_text">보내는 코인</string>
    <string name="swap_receive_text">받는 코인</string>
    <string name="swap_dida_text">DIDA</string>
    <string name="swap_klay_text">KLAY</string>
    <string name="swap_example_coin_hint">1.000000</string>
    <string name="swap_dida_equal_klay">1 DIDA = 1 KLAY</string>
    <string name="swap_expect_title">예상내역</string>
    <string name="swap_exchange_percent_text">교환 비율</string>
    <string name="swap_min_trade_amount_text">최소 거래 수량</string>
    <string name="swap_fee_text">수수료</string>
    <string name="swap_exchange_route_text">교환 경로</string>
    <string name="swap_klay_to_dida">KLAY -> DIDA</string>
    <string name="swap_dida_to_klay">DIDA -> KLAY</string>
    <string name="swap_confirm_btn_text">스왑하기</string>

    <string name="swap_klaytoDida_loading_text">DIDA 코인으로\n스왑하는중</string>
    <string name="swap_DidaToKlay_loading_text">KLAY 코인으로\n스왑하는중</string>
    <string name="swap_klaytoDida_success_text">DIDA 코인을\n충전했어요!</string>
    <string name="swap_DidaToKlay_success_text">KLAY 코인을\n충전했어요!</string>
    <string name="swap_success_confirm_btn">확인</string>
    </resources>